Adding comments to the project

--- a/templates/myreviews.html
+++ b/templates/myreviews.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+    
+    <!-- My Reviews Component -->
     <h1 class="text-center">My Reviews</h1>
      <br>
     <button type="button" class="btn btn-success text-center d-flex my-2 mx-auto" data-toggle="modal" data-target="#exampleModal">
@@ -7,17 +9,25 @@
     </button>
     <div class="">
        {% for myreview in myreviews %}
+       
+        <!-- Elements Created for each review in mongodb -->
         <div class="mt-2 profile card col-sm-12 mx-1" id="{{ myreview._id }}">
             <div class="d-block">
+                
+                <!-- Boook cover and information container -->
                 <div class="col-sm-12 col-md-8 mt-3 mb-3 d-flex review" >
                     <img src="{{ myreview.cover }}" alt="Book Cover" class="col-sm-4 col-md-4 book-cover ">
                     <div class="d-flex">
+                        
+                        <!-- Review Information  -->
                         <div>
                             <h4 class="result-text">{{ myreview.title }}</h4>
                             <h5 class="result-text">{{ myreview.author }}</h5>
                             <span class="result-text">Review by: {{ myreview.user }} </span>
                             <p class="result-text">Created: {{ myreview.creation_date }}</p>
                             <p class="result-text">Last Modified: {{ myreview.last_mod }}</p>
+                            
+                            <!-- Edit an Delete Buttons -->
                             <div class="d-flex">
                                 {% if session.user|lower == myreview.user|lower %}
                                     <a href="{{ url_for('edit_review', review_id=myreview._id)}}" class="btn btn-success review-button text-center d-flex my-2 mx-1">
@@ -33,6 +43,8 @@
                     <br>
                 </div>
             </div>
+
+            <!-- Book Review  -->
             <div class="d-block col-sm-12">
                 <cite class="result-text my-auto text-center">{{ myreview.review }}</cite>
                 <br>
@@ -41,34 +53,49 @@
         {% endfor %}
     </div> 
 
-    <!-- Create Review Modal Form -->
+    <!-- Create Review Modal Form based on Bootstrap template-->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
+
+                <!-- Modal Header  -->
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Create Review</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
+
+                <!-- Modal Body  -->
                 <div class="modal-body">
+
+                    <!-- Create Review Form  -->
                     <form method="POST" action="{{ url_for('create_review') }}">
+                        <!-- Boobk Title Field  -->
                         <div class="form-group">
                             <label>Title:</label> 
                             <input type="text" class="form-control" id="new-title" name="new-title">
                         </div>
+
+                        <!-- Book author Field  -->
                         <div class="form-group">
                             <label>Author:</label> 
                             <input type="text" class="form-control" id="new-author" name="new-author">
                         </div>
+
+                        <!-- Cover URL Field  -->
                         <div class="form-group">
                             <label>Cover URL:</label> 
                             <input type="text" class="form-control" id="new-cover" name="new-cover">
                         </div>
+
+                        <!-- Review Field  -->
                         <div class="form-group">
                             <label>Review:</label> 
                             <textarea name="new-review" id="new-review" cols="30" rows="2" class="form-control" aria-required=""></textarea>
                         </div>
+
+                        <!-- Create Review Button  -->
                         <input type="submit" value="Create Review" class="btn btn-primary text-center mx-auto">
                     </form>
                 </div>
