--- a/templates/login.html
+++ b/templates/login.html
@@ -1,23 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
+    <!-- Login Component -->
     <h1 class="display-4 text-center">Login</h1>
     <div class="col-sm-8 mt-3 mx-auto">
+        
+        <!-- Login Form  -->
         <form class="col-sm-12 profile card" method="POST" action="{{ url_for('get_login') }}">
+            
+            <!-- Username Field  -->
             <div class="form-group">
                 <label for="login-username">Username: </label>
                 <input type="text" id="login-username" name="login-username" class="form-control" required>
             </div>
+            
+            <!-- Password Field  -->
             <div class="form-group">
                 <label for="login-password">Password:</label>
                 <input type="password" id="login-password" name="login-password" class="form-control" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
             </div>
             <br>    
+            
+            <!-- Submit Button  -->
             <input type="submit" value="Login" class="form-control btn btn-success col-6 mx-auto">
             <br>
             <div class="mt-3 mb-3"></div>
         </form>
         <br>
+
+        <!-- Link to Register Page -->
         <div>
             <p class="text-center"> New Here?
                 <a href="{{ url_for('get_register') }}" class="">Create an Account</a>
